--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^19.2.4",
     "@google/genai": "^1.40.0",
     "lucide-react": "^0.563.0",
-    "firebase": "^12.9.0"
+    "firebase": "^12.9.0",
+    "@vitejs/plugin-react": "^5.1.3",
+    "vite": "^7.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
