--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
   "name": "Riyadh Clean",
   "short_name": "RiyadhClean",
-  "start_url": ".",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#f3f4f6",
   "theme_color": "#16a34a",
